compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__collapse_nested_case_combines_list_with_unformatted_tail.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main(elems: List(String)) {\n  case elems {\n    [first, .. rest_of_list] ->\n      case rest_of_list {\n        [] -> 0\n        [\"first\"] -> 1\n        [_, \"second\"] -> 2\n        [_, \"second\", \"third\", _] -> 4\n        _ -> -1\n      }\n    _ -> -1\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main(elems: List(String)) {
  case elems {
    [first, .. rest_of_list] ->
               ↑               
      case rest_of_list {
        [] -> 0
        ["first"] -> 1
        [_, "second"] -> 2
        [_, "second", "third", _] -> 4
        _ -> -1
      }
    _ -> -1
  }
}


----- AFTER ACTION
public fn main(elems: List(String)) {
  case elems {
    [first, ] -> 0
    [first, "first"] -> 1
    [first, _, "second"] -> 2
    [first, _, "second", "third", _] -> 4
    [first, _] -> -1
    _ -> -1
  }
}
