compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_string_prefix_pattern_alias_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    let assert \"123\" as one_two_three <> rest = \"123456\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    let assert "123" as one_two_three <> rest = "123456"
                ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑      
}


----- AFTER ACTION
public fn main() {
    let #(one_two_three, rest) = case "123456" {
      "123" as one_two_three <> rest -> #(one_two_three, rest)
      _ -> panic
    }
}
