compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_outer_let_assert_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n    let assert [wibble] = {\n        let assert Ok(wobble) = {\n            Ok(1)\n        }\n        [wobble]\n    }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
    let assert [wibble] = {
                 ▔▔▔▔▔▔▔↑  
        let assert Ok(wobble) = {
            Ok(1)
        }
        [wobble]
    }
}


----- AFTER ACTION
public fn main() {
    let wibble = case {
        let assert Ok(wobble) = {
            Ok(1)
        }
        [wobble]
    } {
      [wibble] -> wibble
      _ -> panic
    }
}
