compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__expand_function_capture.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  wibble(_, 1)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  wibble(_, 1)
         ↑    
}


----- AFTER ACTION
public fn main() {
  fn(value) { wibble(value, 1) }
}
