compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__expand_function_capture_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  wibble(1, _)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  wibble(1, _)
  ↑           
}


----- AFTER ACTION
public fn main() {
  fn(value) { wibble(1, value) }
}
