compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__expand_function_capture_does_not_shadow_variables.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  let value = 1\n  let value_2 = 2\n  wibble(value, _, value_2)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  let value = 1
  let value_2 = 2
  wibble(value, _, value_2)
  ↑                        
}


----- AFTER ACTION
public fn main() {
  let value = 1
  let value_2 = 2
  fn(value_3) { wibble(value, value_3, value_2) }
}
